@@ -52,6 +52,7 @@ The following bugs are resolved with this release:
   [29225] network: Mistyped define statement in socket/sys/socket.h in
     line 184
   [29446] _dlopen now ignores dl_caller argument in static mode
+  [29490] alpha: New __brk_call implementation is broken
 
 
 Version 2.35
